#ifndef BASEPIZZA_H
#define BASEPIZZA_H

class BasePizza{
    public:
        virtual int cost()=0;
};
#endif