#ifndef TOPPING_DECORATOR_H
#define TOPPING_DECORATOR_H

#include "BasePizza.h"

class Topping_Decorator:public BasePizza{
};
#endif